# grove-fit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: conformance.yml  sync-catalog-monthly.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  llmfit-sidecar-hashes.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: detect-hardware.toml
apps/desktop/src-tauri/src/: detect.rs  lib.rs  main.rs
apps/mobile/: README.md  capacitor.config.json  package.json  tsconfig.json
apps/mobile/native/android/dev/boske/grovefit/: GroveFitHardwarePlugin.java
apps/mobile/native/ios/: GroveFitHardwarePlugin.swift
apps/mobile/src/plugin/: detect.test.ts  detect.ts  index.ts  registry.ts  web.ts
apps/web/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: fit.e2e.ts
apps/web/public/: catalog.json
apps/web/src/: detect-hardware.test.ts  detect-hardware.ts  error-boundary.tsx  load-catalog.ts  main.tsx
docs/: REFERENCES.md  architecture.md  decisions.md
scripts/: build-search-index.mjs  copy-llmfit-sidecar.mjs  copy-llmfit-sidecar.sh  generate-icons.cjs  merge-catalog.mjs  stage-catalog.mjs  start-gui.mjs  start-gui.sh  sync-llmfit-db.md  sync-llmfit-db.sh  sync-mobile-native.sh
