[package]
name = "grove-fit-desktop"
version = "0.1.0"
description = "Grove Fit desktop companion"
authors = ["Boske Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "grove_fit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grove-fit-desktop"
path = "src/main.rs"
