[package]
name = "grove-fit-desktop"
version = "0.1.0"
description = "Grove Fit desktop companion"
authors = ["Boske Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS 26+/27 (Tahoe): ObjC method encodings flipped signed→unsigned ints.
# Without this, tao's did_finish_launching panics and the WebView stays blank.
# See https://github.com/tauri-apps/tao/issues/1171
[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }

[lib]
name = "grove_fit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grove-fit-desktop"
path = "src/main.rs"
